--- a/index.html
+++ b/index.html
@@ -1989,6 +1989,84 @@ function emojiHtml(str) {
       });
     }
 
+    async function setupEmojiPickerForInput(container, input) {
+      if (!container || !input) return;
+      await emojiListReady;
+      container.innerHTML = '';
+
+      const preview = document.createElement('img');
+      preview.className = 'emoji-picker-preview';
+      preview.width = 28;
+      preview.height = 28;
+
+      const grid = document.createElement('div');
+      grid.className = 'emoji-picker-grid';
+
+      function currentUrl() {
+        const val = (input.value || '').trim();
+        const resolved = resolveEmoji(val);
+        return resolved || 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png';
+      }
+
+      function updatePreview() {
+        preview.src = currentUrl();
+      }
+
+      emojiList.forEach(({id, url, info}) => {
+        const img = document.createElement('img');
+        img.src = url;
+        if (info) { img.title = info; img.dataset.info = info; }
+        img.addEventListener('click', e => {
+          e.stopPropagation();
+          input.value = id;
+          updatePreview();
+          grid.style.display = 'none';
+        });
+        grid.appendChild(img);
+      });
+
+      const addBtn = document.createElement('button');
+      addBtn.textContent = '+';
+      addBtn.className = 'emoji-add-btn';
+      addBtn.addEventListener('click', async e => {
+        e.stopPropagation();
+        const url = prompt('URL nowego emoji:');
+        if (url) {
+          const info = prompt('Nazwa nowego emoji:') || '';
+          const id = await addEmojiToList(url, info);
+          const img = document.createElement('img');
+          img.src = url;
+          if (info) { img.title = info; img.dataset.info = info; }
+          img.addEventListener('click', ev => {
+            ev.stopPropagation();
+            input.value = id;
+            updatePreview();
+            grid.style.display = 'none';
+          });
+          grid.insertBefore(img, addBtn);
+          input.value = id;
+          updatePreview();
+          grid.style.display = 'none';
+        }
+      });
+      grid.appendChild(addBtn);
+
+      container.appendChild(preview);
+      container.appendChild(grid);
+
+      preview.addEventListener('click', e => {
+        e.stopPropagation();
+        grid.style.display = grid.style.display === 'grid' ? 'none' : 'grid';
+      });
+
+      document.addEventListener('click', e => {
+        if (!container.contains(e.target)) grid.style.display = 'none';
+      });
+
+      input.addEventListener('input', updatePreview);
+      updatePreview();
+    }
+
     function setupDropdownInput(input, itemsFn) {
       if (!input) return;
       const wrapper = document.createElement('div');
@@ -5418,6 +5496,8 @@ function confirmLayerDelete() {
       const layerInput = document.getElementById('mobilePinLayer');
       const catInput = document.getElementById('mobilePinCategory');
       const emojiInput = document.getElementById('mobilePinEmoji');
+      const emojiPicker = document.getElementById('mobilePinEmojiPicker');
+      const emojiWrapper = document.getElementById('mobileEmojiPickerWrapper');
       const inactiveInput = document.getElementById('mobilePinInactive');
       const closedInput = document.getElementById('mobilePinClosed');
       const secretInput = document.getElementById('mobilePinSecret');
@@ -5432,12 +5512,34 @@ function confirmLayerDelete() {
       if (!btn || !modal || !ok || !cancel || !nameInput || !trudInput || !trudLabel || !trudWrapper) return;
       setupTrudnoscInput(trudInput, trudLabel);
 
+      let mobileEmojiPickerInitialized = false;
+      function refreshMobileEmojiPicker() {
+        if (!emojiPicker || !emojiInput) return;
+        if (!mobileEmojiPickerInitialized) {
+          setupEmojiPickerForInput(emojiPicker, emojiInput);
+          mobileEmojiPickerInitialized = true;
+        } else {
+          const preview = emojiPicker.querySelector('.emoji-picker-preview');
+          const grid = emojiPicker.querySelector('.emoji-picker-grid');
+          if (preview) {
+            const val = (emojiInput.value || '').trim();
+            preview.src = resolveEmoji(val) || 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png';
+          }
+          if (grid) grid.style.display = 'none';
+        }
+      }
+
     function openGpsModal() {
       nameInput.value = '';
       descInput.style.display = 'none';
       layerInput.style.display = 'none';
       catInput.style.display = 'none';
-      emojiInput.style.display = 'none';
+      emojiInput.value = '';
+      if (emojiWrapper) emojiWrapper.style.display = 'none';
+      if (emojiPicker) {
+        const grid = emojiPicker.querySelector('.emoji-picker-grid');
+        if (grid) grid.style.display = 'none';
+      }
       inactiveInput.parentElement.style.display = 'none';
       closedInput.parentElement.style.display = 'none';
       secretInput.parentElement.style.display = 'none';
@@ -5456,6 +5558,7 @@ function confirmLayerDelete() {
       layerInput.value = '';
       catInput.value = '';
       emojiInput.value = '';
+      if (emojiWrapper) emojiWrapper.style.display = '';
       inactiveInput.checked = false;
       closedInput.checked = false;
       secretInput.checked = false;
@@ -5466,7 +5569,6 @@ function confirmLayerDelete() {
       descInput.style.display = '';
       layerInput.style.display = '';
       catInput.style.display = '';
-      emojiInput.style.display = '';
       inactiveInput.parentElement.style.display = '';
       closedInput.parentElement.style.display = '';
       secretInput.parentElement.style.display = '';
@@ -5480,7 +5582,7 @@ function confirmLayerDelete() {
         trudInput.value = 3;
         trudInput.dispatchEvent(new Event('input'));
         modal.style.display = 'flex';
-        setupEmojiInput(emojiInput);
+        refreshMobileEmojiPicker();
         setupDropdownInput(layerInput, () => Object.keys(warstwy));
         setupDropdownInput(catInput, () => Array.from(categories).filter(c => c));
       }
@@ -5581,7 +5683,10 @@ function confirmLayerDelete() {
       <input type="text" id="mobilePinFrom" placeholder="Od kogo" style="width: 100%">
       <input type="text" id="mobilePinLayer" placeholder="Warstwa" style="width: 100%">
       <input type="text" id="mobilePinCategory" placeholder="Kategoria" style="width: 100%">
-      <input type="text" id="mobilePinEmoji" placeholder="Emoji" style="width: 100%">
+      <div id="mobileEmojiPickerWrapper" class="mobile-emoji-picker">
+        <div id="mobilePinEmojiPicker" class="emoji-picker"></div>
+        <input type="hidden" id="mobilePinEmoji">
+      </div>
       <div class="trudnosc-wrapper" id="mobileTrudnoscWrapper">
         <div class="trudnosc-title">Poziom trudności</div>
         <input type="range" id="mobilePinTrudnosc" class="trudnosc-range" min="1" max="5" step="1" value="3">
